# ogre-game

./: CMakeLists.txt
Application/: CMakeLists.txt
Application/source/: main_application.cpp
Control/: CMakeLists.txt
Control/include/: main_controller.hpp
Control/source/: main_controller.cpp
Model/: CMakeLists.txt
Model/include/: player.hpp
View/: CMakeLists.txt
